[FEAT]: Add some feature on Home

--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,10 @@
 :root {
     --background: hsl(313, 74%, 93%);
     --button: hsl(326, 66%, 65%);
+    --button-transparent: hsla(326, 66%, 65%, 0.5);
 }
 
 * {
-    background-color: var(--background);
+    /* background-color: var(--background); */
+    /* background-color: whitesmoke; */
 }
