subida de diseño

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -2,10 +2,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 
 .video {
     height: 100%;
+  
 }
 
 .inactive {
@@ -23,16 +25,4 @@
 .cardContainer:hover .boxHover {
     display: block;
     overflow: hidden;
-}
-
-#cardBody1 {
-    height: 612.4px;
-}
-
-#cardBody2 {
-    height: 366.63px;
-}
-
-#cardBody3 {
-    height: 428.74px;
 }
